NoSQL_setup working version

--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -130,11 +130,11 @@
       " 'PostCode': 'CT19 6BL',\n",
       " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('647a570d448a8bc403858e54'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " '_id': ObjectId('647a981b1be05bca31a366d2'),\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
     "new_restaurant = {'_id': '', 'FHRSID': 'None', 'ChangesByServerID': 'None', 'LocalAuthorityBusinessID': 'None',\\\n",
     "                  'BusinessName': 'Penang Flavors', 'BusinessType': 'Restaurant/Cafe/Canteen',\\\n",
     "                  'BusinessTypeID': 1, 'AddressLine1': 'None', 'AddressLine2': 'None', 'AddressLine3': 'None',\\\n",
-    "                  'AddressLine4': 'None', 'PostCode': 'None', 'Phone': 'None', 'RatingValue': 'None',\\\n",
+    "                  'AddressLine4': 'None', 'PostCode': 'None', 'Phone': 'None', 'RatingValue': None,\\\n",
     "                  'RatingKey': 'None', 'RatingDate': 'None', 'LocalAuthorityCode': 'None',\\\n",
     "                  'LocalAuthorityName': 'None', 'LocalAuthorityWebSite': 'None', 'LocalAuthorityEmailAddress': 'None',\\\n",
     "                  'scores': {'Hygiene': 'None', 'Structural': 'None', 'ConfidenceInManagement': 'None'},\\\n",
@@ -205,17 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1c459f0e940>"
+       "<pymongo.results.InsertOneResult at 0x25c078562c0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
       " 'PostCode': 'None',\n",
       " 'RatingDate': 'None',\n",
       " 'RatingKey': 'None',\n",
-      " 'RatingValue': 'None',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': 'None',\n",
       " 'SchemeType': 'None',\n",
       " '_id': '',\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('647a570d448a8bc403858b6e'), 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
+      "{'_id': ObjectId('647a981b1be05bca31a363f2'), 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
      ]
     }
    ],
@@ -323,17 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c45a386980>"
+       "<pymongo.results.UpdateResult at 0x25c07fd7180>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -399,17 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1c45a3aa500>"
+       "<pymongo.results.DeleteResult at 0x25c07857600>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('647a570d448a8bc403858e54'),\n",
+      " '_id': ObjectId('647a981b1be05bca31a366d2'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -515,12 +515,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x25c07104180>"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "# Consideration for Penang Flavors which was added without coordinates\n",
+    "establishments.update_many({'BusinessName': {'$ne': 'Penang Flavors'}}, [ {'$set':{ \"geocode.latitude\" : {'$toDecimal': \"$geocode.latitude\"}}} ])\n",
+    "establishments.update_many({'BusinessName': {'$ne': 'Penang Flavors'}}, [ {'$set':{ \"geocode.longitude\" : {'$toDecimal': \"$geocode.longitude\"}}} ])"
    ]
   },
   {
@@ -533,10 +547,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x25c071491c0>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -545,23 +570,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x25c04a03f40>"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({'RatingValue': {'$ne': None}}, [ {'$set':{ \"RatingValue\" : {'$toInt': \"$RatingValue\"}}} ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "0deacaf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bson.decimal128.Decimal128'>\n",
+      "<class 'bson.decimal128.Decimal128'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the coordinates and rating value are now numbers\n",
+    "latitude_check = db.establishments.find_one({'geocode.latitude': {'$ne': None}})['geocode']['latitude']\n",
+    "longitude_check = db.establishments.find_one({'geocode.longitude': {'$ne': None}})['geocode']['longitude']\n",
+    "rating_value_check = db.establishments.find_one({'RatingValue': {'$ne': None}})['RatingValue']\n",
+    "\n",
+    "print(type(latitude_check))\n",
+    "print(type(longitude_check))\n",
+    "print(type(rating_value_check))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0deacaf9",
+   "id": "bbeb8887",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
