Made a correction to NoSQL_setup.ipynb

--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'The Coastguard Inn',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 1034540,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('647a981b1be05bca31a366d2'),\n",
-      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('647aa0ff97252124e15a3efc'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -145,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -183,39 +183,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dictionary for the new restaurant data\n",
-    "new_restaurant = {'_id': '', 'FHRSID': 'None', 'ChangesByServerID': 'None', 'LocalAuthorityBusinessID': 'None',\\\n",
-    "                  'BusinessName': 'Penang Flavors', 'BusinessType': 'Restaurant/Cafe/Canteen',\\\n",
-    "                  'BusinessTypeID': 1, 'AddressLine1': 'None', 'AddressLine2': 'None', 'AddressLine3': 'None',\\\n",
-    "                  'AddressLine4': 'None', 'PostCode': 'None', 'Phone': 'None', 'RatingValue': None,\\\n",
-    "                  'RatingKey': 'None', 'RatingDate': 'None', 'LocalAuthorityCode': 'None',\\\n",
-    "                  'LocalAuthorityName': 'None', 'LocalAuthorityWebSite': 'None', 'LocalAuthorityEmailAddress': 'None',\\\n",
-    "                  'scores': {'Hygiene': 'None', 'Structural': 'None', 'ConfidenceInManagement': 'None'},\\\n",
-    "                  'SchemeType': 'None', 'geocode': {'longitude': 'None', 'latitude': 'None'},\\\n",
-    "                  'RightToReply': 'None', 'Distance': 'None', 'NewRatingPending': True,\\\n",
-    "                  'meta': {'dataSource': None, 'extractDate': 'None', 'itemCount': 'None',\\\n",
-    "                           'returncode': 'None', 'totalCount': 'None', 'totalPages': 'None',\\\n",
-    "                           'pageSize': 'None', 'pageNumber': 'None'}, 'links': [{'rel': 'self', 'href': 'None'}]}"
+    "new_restaurant = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x25c078562c0>"
+       "<pymongo.results.InsertOneResult at 0x1b6d23c5280>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -235,49 +251,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'None',\n",
-      " 'AddressLine2': 'None',\n",
-      " 'AddressLine3': 'None',\n",
-      " 'AddressLine4': 'None',\n",
-      " 'BusinessName': 'Penang Flavors',\n",
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
-      " 'ChangesByServerID': 'None',\n",
-      " 'Distance': 'None',\n",
-      " 'FHRSID': 'None',\n",
-      " 'LocalAuthorityBusinessID': 'None',\n",
-      " 'LocalAuthorityCode': 'None',\n",
-      " 'LocalAuthorityEmailAddress': 'None',\n",
-      " 'LocalAuthorityName': 'None',\n",
-      " 'LocalAuthorityWebSite': 'None',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
       " 'NewRatingPending': True,\n",
-      " 'Phone': 'None',\n",
-      " 'PostCode': 'None',\n",
-      " 'RatingDate': 'None',\n",
-      " 'RatingKey': 'None',\n",
-      " 'RatingValue': None,\n",
-      " 'RightToReply': 'None',\n",
-      " 'SchemeType': 'None',\n",
-      " '_id': '',\n",
-      " 'geocode': {'latitude': 'None', 'longitude': 'None'},\n",
-      " 'links': [{'href': 'None', 'rel': 'self'}],\n",
-      " 'meta': {'dataSource': None,\n",
-      "          'extractDate': 'None',\n",
-      "          'itemCount': 'None',\n",
-      "          'pageNumber': 'None',\n",
-      "          'pageSize': 'None',\n",
-      "          'returncode': 'None',\n",
-      "          'totalCount': 'None',\n",
-      "          'totalPages': 'None'},\n",
-      " 'scores': {'ConfidenceInManagement': 'None',\n",
-      "            'Hygiene': 'None',\n",
-      "            'Structural': 'None'}}\n"
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('647aa138dc83fe505f1cf4ba'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
    ],
    "source": [
     "# Check that the new restaurant was inserted\n",
-    "query = {'BusinessName': 'Penang Flavors'}\n",
+    "query = {'BusinessName': 'Penang Flavours'}\n",
     "result = db.establishments.find_one(query)\n",
     "pprint(result)"
    ]
@@ -292,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -300,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('647a981b1be05bca31a363f2'), 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
+      "{'_id': ObjectId('647aa0ff97252124e15a3efd'), 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
      ]
     }
    ],
@@ -323,30 +322,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x25c07fd7180>"
+       "<pymongo.results.UpdateResult at 0x1b6d23cf980>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Update the new restaurant with the correct BusinessTypeID\n",
-    "db.establishments.update_one({'BusinessName': 'Penang Flavors'},\n",
+    "db.establishments.update_one({'BusinessName': 'Penang Flavours'},\n",
     "    {'$set': {'BusinessTypeID': 1}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -354,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': '', 'BusinessName': 'Penang Flavors', 'BusinessTypeID': 1}\n"
+      "{'_id': ObjectId('647aa138dc83fe505f1cf4ba'), 'BusinessName': 'Penang Flavours', 'BusinessTypeID': 1}\n"
      ]
     }
    ],
    "source": [
     "# Confirm that the new restaurant was updated\n",
-    "query = {'BusinessName': 'Penang Flavors'}\n",
+    "query = {'BusinessName': 'Penang Flavours'}\n",
     "fields = {'BusinessName', 'BusinessTypeID'}\n",
     "result = db.establishments.find_one(query, fields)\n",
     "\n",
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -399,17 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x25c07857600>"
+       "<pymongo.results.DeleteResult at 0x1b6d23dfe80>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -475,7 +474,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('647a981b1be05bca31a366d2'),\n",
+      " '_id': ObjectId('647aa0ff97252124e15a41e0'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -515,17 +514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x25c07104180>"
+       "<pymongo.results.UpdateResult at 0x1b6d06ec880>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,8 +532,8 @@
    "source": [
     "# Change the data type from String to Decimal for longitude and latitude\n",
     "# Consideration for Penang Flavors which was added without coordinates\n",
-    "establishments.update_many({'BusinessName': {'$ne': 'Penang Flavors'}}, [ {'$set':{ \"geocode.latitude\" : {'$toDecimal': \"$geocode.latitude\"}}} ])\n",
-    "establishments.update_many({'BusinessName': {'$ne': 'Penang Flavors'}}, [ {'$set':{ \"geocode.longitude\" : {'$toDecimal': \"$geocode.longitude\"}}} ])"
+    "establishments.update_many({}, [ {'$set':{ \"geocode.latitude\" : {'$toDecimal': \"$geocode.latitude\"}}} ])\n",
+    "establishments.update_many({}, [ {'$set':{ \"geocode.longitude\" : {'$toDecimal': \"$geocode.longitude\"}}} ])"
    ]
   },
   {
@@ -547,17 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x25c071491c0>"
+       "<pymongo.results.UpdateResult at 0x1b6d23de540>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,17 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x25c04a03f40>"
+       "<pymongo.results.UpdateResult at 0x1b6d23a5400>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
